// Database Schema for Queuing Management System
// Generated from TypeScript interfaces and UI table columns analysis
// DBML (Database Markup Language) Format

// ============================================================================
// ENUM TYPES (Note: DBML doesn't have native ENUM support, using VARCHAR with constraints)
// ============================================================================

// Counter Types: 'benefit', 'shib'
// Counter Status: 'active', 'inactive', 'maintenance'
// Device Types: 'kiosk', 'tv', 'desktop'
// Device Status: 'online', 'offline', 'maintenance'
// Queue Status: 'normal', 'busy', 'critical', 'paused'
// Ticket Status: 'waiting', 'called', 'serving', 'completed', 'skipped', 'transferred', 'cancelled'
// Ticket History Status: 'completed', 'skipped', 'transferred'
// Counter Log Status: 'active', 'idle', 'offline'
// Alert Types: 'warning', 'critical', 'info'
// User Roles: 'counter', 'supervisor', 'admin'
// Service Status: 'active', 'inactive'
// Clerk Status: 'active', 'inactive', 'on_leave'

// ============================================================================
// CORE TABLES
// ============================================================================

Table regions {
  id varchar(50) [primary key]
  name varchar(100) [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table offices {
  id varchar(50) [primary key]
  name varchar(200) [not null]
  address varchar(500)
  region_id varchar(50) [not null, ref: > regions.id]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    region_id [name: 'idx_offices_region_id']
  }
}

Table clerks {
  id varchar(50) [primary key]
  name varchar(200) [not null]
  email varchar(255) [unique]
  department varchar(100)
  phone_number varchar(20)
  status varchar [default: 'active', note: "Values: 'active', 'inactive', 'on_leave'"]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    email [name: 'idx_clerks_email']
    status [name: 'idx_clerks_status']
  }
}

Table counters {
  id varchar(50) [primary key]
  name varchar(200) [not null]
  type varchar [not null, note: "Values: 'benefit', 'shib'"]
  status varchar [default: 'active', note: "Values: 'active', 'inactive', 'maintenance'"]
  office_id varchar(50) [not null, ref: > offices.id]
  clerk_id varchar(50) [ref: > clerks.id]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    office_id [name: 'idx_counters_office_id']
    clerk_id [name: 'idx_counters_clerk_id']
    status [name: 'idx_counters_status']
    type [name: 'idx_counters_type']
  }
}

Table services {
  id varchar(50) [primary key]
  name varchar(200) [not null]
  description text
  estimated_time integer [note: 'in minutes']
  status varchar [default: 'active', note: "Values: 'active', 'inactive'"]
  region_id varchar(50) [not null, ref: > regions.id]
  office_id varchar(50) [not null, ref: > offices.id]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    office_id [name: 'idx_services_office_id']
    region_id [name: 'idx_services_region_id']
    status [name: 'idx_services_status']
  }
}

Table service_documents {
  id varchar(50) [primary key]
  service_id varchar(50) [not null, ref: > services.id]
  document_name varchar(200) [not null]
  is_required boolean [default: true]
  order_index integer [default: 0]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    service_id [name: 'idx_service_documents_service_id']
  }
}

Table devices {
  id varchar(50) [primary key]
  name varchar(200) [not null]
  type varchar [not null, note: "Values: 'kiosk', 'tv', 'desktop'"]
  status varchar [default: 'offline', note: "Values: 'online', 'offline', 'maintenance'"]
  region_id varchar(50) [not null, ref: > regions.id]
  office_id varchar(50) [not null, ref: > offices.id]
  serial_number varchar(100) [unique]
  ip_address varchar(50)
  password varchar(255) [note: 'encrypted']
  last_seen timestamp
  notes text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    office_id [name: 'idx_devices_office_id']
    region_id [name: 'idx_devices_region_id']
    type [name: 'idx_devices_type']
    status [name: 'idx_devices_status']
    serial_number [name: 'idx_devices_serial_number']
  }
}

Table queues {
  id varchar(50) [primary key]
  name varchar(200) [not null]
  service_type varchar(200) [not null]
  office_id varchar(50) [not null, ref: > offices.id]
  service_id varchar(50) [ref: > services.id]
  status varchar [default: 'normal', note: "Values: 'normal', 'busy', 'critical', 'paused'"]
  members_waiting integer [default: 0]
  members_being_served integer [default: 0]
  average_wait_time integer [default: 0, note: 'in minutes']
  counters integer [default: 0]
  active_counters integer [default: 0]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    office_id [name: 'idx_queues_office_id']
    service_id [name: 'idx_queues_service_id']
    status [name: 'idx_queues_status']
  }
}

Table tickets {
  id varchar(50) [primary key]
  ticket_number varchar(50) [unique, not null]
  service_type varchar(200) [not null]
  service_id varchar(50) [ref: > services.id]
  queue_id varchar(50) [not null, ref: > queues.id]
  member_number varchar(50)
  member_name varchar(200)
  phone_number varchar(20)
  estimated_time integer [note: 'in seconds']
  priority boolean [default: false]
  status varchar [default: 'waiting', note: "Values: 'waiting', 'called', 'serving', 'completed', 'skipped', 'transferred', 'cancelled'"]
  counter_id varchar(50) [ref: > counters.id]
  clerk_id varchar(50) [ref: > clerks.id]
  called_at timestamp
  serving_started_at timestamp
  completed_at timestamp
  duration_seconds integer
  transferred_to_counter_id varchar(50) [ref: > counters.id]
  office_id varchar(50) [not null, ref: > offices.id]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    ticket_number [name: 'idx_tickets_ticket_number']
    queue_id [name: 'idx_tickets_queue_id']
    counter_id [name: 'idx_tickets_counter_id']
    clerk_id [name: 'idx_tickets_clerk_id']
    status [name: 'idx_tickets_status']
    created_at [name: 'idx_tickets_created_at']
    member_number [name: 'idx_tickets_member_number']
    office_id [name: 'idx_tickets_office_id']
  }
}

Table ticket_history {
  id varchar(50) [primary key]
  ticket_id varchar(50) [ref: > tickets.id]
  ticket_number varchar(50) [not null]
  service_type varchar(200) [not null]
  start_time timestamp [not null]
  end_time timestamp
  duration integer [note: 'in seconds']
  status varchar [not null, note: "Values: 'completed', 'skipped', 'transferred'"]
  transferred_to varchar(200)
  clerk_id varchar(50) [ref: > clerks.id]
  clerk_name varchar(200) [note: 'denormalized for performance']
  counter_id varchar(50) [ref: > counters.id]
  counter_name varchar(200) [note: 'denormalized for performance']
  office_id varchar(50) [ref: > offices.id]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    ticket_id [name: 'idx_ticket_history_ticket_id']
    clerk_id [name: 'idx_ticket_history_clerk_id']
    counter_id [name: 'idx_ticket_history_counter_id']
    start_time [name: 'idx_ticket_history_start_time']
    status [name: 'idx_ticket_history_status']
    office_id [name: 'idx_ticket_history_office_id']
  }
}

Table counter_assignments {
  id varchar(50) [primary key]
  counter_id varchar(50) [not null, ref: > counters.id]
  clerk_id varchar(50) [not null, ref: > clerks.id]
  assigned_at timestamp [default: `CURRENT_TIMESTAMP`]
  unassigned_at timestamp
  is_active boolean [default: true]

  indexes {
    counter_id [name: 'idx_counter_assignments_counter_id']
    clerk_id [name: 'idx_counter_assignments_clerk_id']
    is_active [name: 'idx_counter_assignments_is_active']
    assigned_at [name: 'idx_counter_assignments_assigned_at']
  }
}

Table counter_status_log {
  id varchar(50) [primary key]
  counter_id varchar(50) [not null, ref: > counters.id]
  status varchar [not null, note: "Values: 'active', 'idle', 'offline'"]
  current_ticket_number varchar(50)
  time_spent integer [note: 'in seconds']
  clerk_id varchar(50) [ref: > clerks.id]
  logged_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    counter_id [name: 'idx_counter_status_log_counter_id']
    logged_at [name: 'idx_counter_status_log_logged_at']
    status [name: 'idx_counter_status_log_status']
  }
}

Table queue_alerts {
  id varchar(50) [primary key]
  queue_id varchar(50) [not null, ref: > queues.id]
  type varchar [not null, note: "Values: 'warning', 'critical', 'info'"]
  message text [not null]
  is_resolved boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  resolved_at timestamp

  indexes {
    queue_id [name: 'idx_queue_alerts_queue_id']
    is_resolved [name: 'idx_queue_alerts_is_resolved']
    type [name: 'idx_queue_alerts_type']
  }
}

Table users {
  id varchar(50) [primary key]
  clerk_id varchar(50) [ref: > clerks.id]
  username varchar(100) [unique, not null]
  email varchar(255) [unique]
  password_hash varchar(255) [not null]
  role varchar [not null, note: "Values: 'counter', 'supervisor', 'admin'"]
  device_name varchar(200)
  device_password varchar(255) [note: 'encrypted']
  is_active boolean [default: true]
  last_login timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    username [name: 'idx_users_username']
    clerk_id [name: 'idx_users_clerk_id']
    role [name: 'idx_users_role']
    email [name: 'idx_users_email']
  }
}

Table daily_reports {
  id varchar(50) [primary key]
  report_date date [not null]
  office_id varchar(50) [not null, ref: > offices.id]
  total_tickets integer [default: 0]
  completed_tickets integer [default: 0]
  skipped_tickets integer [default: 0]
  transferred_tickets integer [default: 0]
  average_wait_time decimal(10,2)
  average_service_time decimal(10,2)
  peak_hour varchar(10)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    (report_date, office_id) [unique, name: 'unique_daily_report']
    report_date [name: 'idx_daily_reports_date']
    office_id [name: 'idx_daily_reports_office_id']
  }
}

Table clerk_performance {
  id varchar(50) [primary key]
  clerk_id varchar(50) [not null, ref: > clerks.id]
  period_start date [not null]
  period_end date [not null]
  tickets_served integer [default: 0]
  avg_service_time decimal(10,2)
  completion_rate decimal(5,2)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    clerk_id [name: 'idx_clerk_performance_clerk_id']
    (period_start, period_end) [name: 'idx_clerk_performance_period']
  }
}

Table counter_performance {
  id varchar(50) [primary key]
  counter_id varchar(50) [not null, ref: > counters.id]
  period_start date [not null]
  period_end date [not null]
  tickets_served integer [default: 0]
  avg_service_time decimal(10,2)
  efficiency decimal(10,2) [note: 'tickets per minute']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    counter_id [name: 'idx_counter_performance_counter_id']
    (period_start, period_end) [name: 'idx_counter_performance_period']
  }
}

Table members {
  member_number varchar(50) [primary key]
  name varchar(200) [not null]
  phone_number varchar(20)
  email varchar(255)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    phone_number [name: 'idx_members_phone_number']
    email [name: 'idx_members_email']
  }
}

Table device_sessions {
  id varchar(50) [primary key]
  device_id varchar(50) [not null, ref: > devices.id]
  token varchar(255) [unique, not null]
  expires_at timestamp [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    device_id [name: 'idx_device_sessions_device_id']
    token [name: 'idx_device_sessions_token']
    expires_at [name: 'idx_device_sessions_expires_at']
  }
}
